@slidy/core - splashscreens

--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -11,9 +11,41 @@
         <meta http-equiv="Pragma" content="no-cache" />
         <meta http-equiv="Expires" content="0" />
 
-        <link rel="apple-touch-icon" type="image/png" sizes="any" href="/apple-touch-icon.png">
-        <link rel="apple-touch-icon-precomposed" type="image/png" sizes="any" href="/apple-touch-icon-precomposed.png">
-        <link rel="icon" type="image/png" href="favicon.png" />
+        <link href="assets/splashscreens/iphone5_splash.png"
+            media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/iphone6_splash.png"
+            media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/iphoneplus_splash.png"
+            media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/iphonex_splash.png"
+            media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/iphonexr_splash.png"
+            media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/iphonexsmax_splash.png"
+            media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/ipad_splash.png"
+            media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/ipadpro1_splash.png"
+            media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/ipadpro3_splash.png"
+            media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/ipadpro2_splash.png"
+            media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)"
+            rel="apple-touch-startup-image" />
+
+        <link rel="apple-touch-icon" type="image/png" sizes="any" href="assets/apple-touch-icon.png">
+        <link rel="apple-touch-icon-precomposed" type="image/png" sizes="any"
+            href="assets/apple-touch-icon-precomposed.png">
+        <link rel="icon" type="image/png" href="assets/favicon.png" />
         <link rel="stylesheet" href="dev.css" />
 
         <title>Slidy 3.1.0 - NativeJS</title>
@@ -32,7 +64,7 @@
 
     <body>
         <header>
-            <img id="slidy-logo" alt="Slidy" width="50" height="50" src="favicon.png" />
+            <img id="slidy-logo" alt="Slidy" width="50" height="50" src="assets/favicon.png" />
             <h3>
                 Slidy <span>3.1.0</span><sub>nativeJS</sub><sub id="stats" />
             </h3>
