@slidy/core - fix splash screens

--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -29,6 +29,9 @@
         <link href="assets/splashscreens/iphonexsmax_splash.png"
             media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)"
             rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/iphone12_splash.png"
+            media="(device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3)"
+            rel="apple-touch-startup-image" />
         <link href="assets/splashscreens/ipad_splash.png"
             media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)"
             rel="apple-touch-startup-image" />
